derive/tests/compile_fail/unsupported_with.rs
use config_derive::Deserialize;

#[derive(Deserialize)]
struct MyStruct {
    #[serde(with = "some_module")]
    field: String,
}

fn main() {}
