derive/tests/compile_fail/unsupported_with.stderr
error: config::Deserialize does not support #[serde(with)]
 --> tests/compile_fail/unsupported_with.rs:5:13
  |
5 |     #[serde(with = "some_module")]
  |             ^^^^
